Fix moving gaps when moving from 1 to more windows

--- a/home/private_dot_config/waybar/style.css
+++ b/home/private_dot_config/waybar/style.css
@@ -32,7 +32,7 @@ window#waybar.hidden {
 }
 
 #mode {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -44,7 +44,7 @@ window#waybar.hidden {
 }
 
 #window {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -56,7 +56,7 @@ window#waybar.hidden {
 }
 
 #workspaces {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 12px;
 	font-size: 4px;
 	margin-bottom: 0px;
@@ -101,7 +101,7 @@ window#waybar.hidden {
 }
 
 #network {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -113,7 +113,7 @@ window#waybar.hidden {
 }
 
 #pulseaudio {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -132,7 +132,7 @@ window#waybar.hidden {
 }
 
 #clock {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -144,7 +144,7 @@ window#waybar.hidden {
 }
 
 #memory {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -155,7 +155,7 @@ window#waybar.hidden {
 	background: @purple;
 }
 #cpu {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
@@ -166,7 +166,7 @@ window#waybar.hidden {
 	background: @blue;
 }
 #tray {
-	margin-top: 6px;
+	margin-top: 5px;
 	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
